fix broken CurationTaskDaoAutowireTest by passing projectId to getCurationTaskBundles